--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "net-eg",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^15.3.1",
-    "nodemon": "^2.0.7"
-  }
+	"name": "net-eg",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon dist/app.js",
+		"test": "SET \"NODE_ENV=test\" && mocha src/test/**/*.test.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.11",
+		"@types/node": "^15.3.1",
+		"expect": "^27.0.6",
+		"mocha": "^9.0.2",
+		"nodemon": "^2.0.7"
+	}
 }
